# wecom-bot-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  README_zh.md  codecov.yml  marketplace.yaml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  smithery.yaml
.github/workflows/: bumpversion.yml  codecov.yml  docs.yml  e2e-test.yml  mr-test.yml  python-publish.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: index.md  mcp-tools.md  python.md
docs/config/: environment.md  index.md  mcp-clients.md  multi-bot.md
docs/guide/: getting-started.md  installation.md  message-types.md  multi-bot.md  quick-start.md
docs/zh/: index.md
docs/zh/api/: index.md  mcp-tools.md  python.md
docs/zh/config/: environment.md  index.md  mcp-clients.md  multi-bot.md
docs/zh/guide/: getting-started.md  installation.md  message-types.md  multi-bot.md  quick-start.md
nox_actions/: __init__.py  codetest.py  lint.py  release.py  utils.py
src/wecom_bot_mcp_server/: __init__.py  __version__.py  bot_config.py  constants.py  errors.py  file.py  image.py  logger.py  message.py  models.py  server.py  text_utils.py  utils.py
tests/: conftest.py  test_bot_config.py  test_file.py  test_image.py  test_imports.py  test_integration.py  test_log_config.py  test_logger.py  test_markdown.py  test_message.py  test_server.py  test_text_utils.py  test_utils.py
tests/e2e/: __init__.py  conftest.py  test_mcp_tools.py  test_wecom_real.py
