[project]
name = "wecom-bot-mcp-server"
version = "0.1.0"
description = "A WeCom bot server that follows the Model Context Protocol (MCP)"
authors = [
    { name = "Codeium", email = "support@codeium.com" },
]
dependencies = [
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.1.0",
    "platformdirs>=4.1.0",
    "pydantic>=2.5.2",
    "uvicorn>=0.34.0",
    "tenacity>=8.2.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.3.2",
]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "pylint>=3.0.2",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=wecom_bot_mcp_server --cov-report=term-missing"

[tool.coverage.run]
source = ["wecom_bot_mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[project.scripts]
wecom-bot-mcp-server = "wecom_bot_mcp_server.server:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wecom_bot_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true
